// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty() should fail when at least one item is not a string 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Every value should follow the rule: [Value should be a string]",
      "path": Array [],
      "value": Array [
        "first",
        1,
        "last",
      ],
    },
  ],
  "rootValue": Array [
    "first",
    1,
    "last",
  ],
}
`;

exports[`empty() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Custom message",
      "path": Array [],
      "value": Array [
        1,
        "test",
      ],
    },
  ],
  "rootValue": Array [
    1,
    "test",
  ],
}
`;
